arkts_static_test/18_Annotations/ets_cases/18.2_Using_Annotations/compile-pass/ANN_18_02_011_PASS_ON_PARAMETER.ets
/*
* Copyright (c) 2021-2026 Huawei Device Co., Ltd.
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 * http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
*/
/**
 * @id ANN_18_02_011_PASS_ON_PARAMETER
 * @expect compile-pass
 * @section 18.2
 * @design 验证注解可应用于参数
 * @note 正向用例：注解在参数上
 */
@interface NotNull {}

function foo(@NotNull name: string): void {}
